maze.wallfollower.WallFollowerMaze.scala.error
Erreur de compilation :
WallFollowerMaze:22: error: ';' expected but 'else' found.
      else{
      ^